<package format="3">
  <name>mocap_interfaces</name>
  <version>0.0.2</version>
  <description>The mocap_interfaces package provides standardized message types for integrating Motion Capture Systems (mocap systems) with ROS 2.</description>
  <author email="fmrico@gmail.com">Francisco Martín</author>
  <maintainer email="albertogarciagomezjacinto@gmail.com">aaggj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- <export>
    <build_type>ament_cmake</build_type>
  </export> -->
</package>
